# PMAB

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.example.yaml
config/strategies/: crypto.yaml  economic.yaml  politics.yaml  sports.yaml
deploy/: polymarket-arb.service
docs/: architecture.md  configuration.md  deployment.md  quickstart.md
scripts/: backtest.py  dashboard.py  diag_markets.py  market_scanner.py  paper_trade.py  run.py
src/backtest/: __init__.py  replay.py  sim_client.py  types.py
src/core/: __init__.py  config.py  logging.py  types.py
src/feeds/: __init__.py  base.py  crypto.py  economic.py  exceptions.py  sports.py
src/monitor/: __init__.py  channels.py  daily_summary.py  dispatcher.py  factory.py  formatters.py  metrics.py  types.py  web_dashboard.py
src/paper/: __init__.py  client.py
src/polymarket/: __init__.py  client.py  exceptions.py  market_params.py  order_pool.py  presigner.py  rate_limiter.py  scanner.py  ws.py
src/risk/: __init__.py  exceptions.py  gates.py  kill_switch.py  market_quality.py  monitor.py  oracle_monitor.py  pnl.py  positions.py
src/strategy/: __init__.py  engine.py  exceptions.py  matcher.py  prioritizer.py  signals.py  sizer.py
tests/test_backtest/: test_replay.py  test_sim_client.py  test_types.py
tests/test_core/: test_config.py
tests/test_feeds/: test_base.py  test_crypto.py  test_economic.py  test_sports.py
tests/test_monitor/: test_channels.py  test_daily_summary.py  test_dashboard.py  test_dispatcher.py  test_factory.py  (+2 more)
(+19 files in other folders)
